fix sidebar visibility toggle on mobile

--- a/app/assets/App/scss/_custom.scss
+++ b/app/assets/App/scss/_custom.scss
@@ -12,7 +12,9 @@ body, #root {
 .header-items-right {
   justify-content: flex-end !important;
 }
-
+.app-menu-icon{
+  vertical-align: bottom!important;
+}
 .fake-avatar {
   min-width: 2rem;
   min-height: 2rem;
